add html semantic to the designs

--- a/src/components/designs/designs.component.html
+++ b/src/components/designs/designs.component.html
@@ -1,24 +1,31 @@
 <section>
     <div class="banner">
-        <h1></h1>
-        <p class="banner-paragraph"></p>
+        <h1>Web Design</h1>
+        <p class="banner-paragraph">
+            We build websites that serve as powerful marketing tools 
+            and bring memorable brand experiences.
+        </p>
     </div>
-    <div class="card">
-        <div class="card-image">
-            <img src="" alt="">
-        </div>
-        <div class="card-info">
-            <h2 class="card-title"></h2>
-            <p class="card-paragraph">
-
-            </p>
+    <div class="cards-div">
+        <div class="card">
+            <div class="card-image">
+                <img src="" alt="">
+            </div>
+            <div class="card-info">
+                <h2 class="card-title">EXPRESS</h2>
+                <p class="card-paragraph">
+                    A multi-carrier shipping website for e-commerce businesses
+                </p>
+            </div>
         </div>
     </div>
     <div class="designs">
         <div class="design-type">
             <div class="hover-div"></div>
-            <h2 class="design-title"></h2>
-            <p class="design-paragraph"> <span>&gt;</span></p>
+            <a [routerLink]="['/designs']" routerLinkActive="router-link-active">
+                <h2 class="design-title"></h2>
+                <p class="design-paragraph"> <span>&gt;</span></p>
+            </a>
         </div>
     </div>
 </section>
