--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,12 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
+
 .content{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
     flex: 1;
     width: 100%;
+    height: 100%;
 }
 
 @media(width <= 1500px){
