--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -7,19 +7,19 @@
                 our expertise can help your business grow.
             </p>
         </div>
-        <a href="" class="get-in-touch-btn">GET IN TOUCH</a>
+        <a [routerLink]="['/contact']" routerLinkActive="router-link-active" class="get-in-touch-btn">GET IN TOUCH</a>
     </div>
 
     <div class="footer-div">
         <div class="under-nav">
             <div class="logo-div">
-                <img src="/assets/shared/desktop/logo-light.png" alt="Designo Logo">
+                <a [routerLink]="['/home']" routerLinkActive="router-link-active"> <img src="/assets/shared/desktop/logo-light.png" alt="Designo Logo"></a>
             </div>
             <div class="links-div">
                 <ul class="links-list">
-                    <a href="" class="links">OUR COMPANY</a>
-                    <a href="" class="links">LOCATIONS</a>
-                    <a href="" class="links">CONTACT</a>
+                    <a [routerLink]="['/about']" routerLinkActive="router-link-active" class="links">OUR COMPANY</a>
+                    <a [routerLink]="['/locations']" routerLinkActive="router-link-active" class="links">LOCATIONS</a>
+                    <a [routerLink]="['/contact']" routerLinkActive="router-link-active" class="links">CONTACT</a>
                 </ul>
             </div>
         </div>
