--- a/src/components/locations-nav/locations-nav.component.html
+++ b/src/components/locations-nav/locations-nav.component.html
@@ -4,7 +4,7 @@
             <img src="assets/shared/desktop/illustration-canada.svg" alt="Canadian buildings">      
         </div>
         <h3>CANADA</h3>
-        <a href="" class="location-anchor">SEE LOCATION</a>
+        <a [routerLink]="['/locations']" routerLinkActive="router-link-active"  class="location-anchor">SEE LOCATION</a>
     </div>
     <div class="location">
         <div class="location-img-div">
@@ -12,13 +12,13 @@
             
         </div>
         <h3>AUSTRALIA</h3>
-        <a href="" class="location-anchor">SEE LOCATION</a>
+        <a [routerLink]="['/locations']" routerLinkActive="router-link-active"  class="location-anchor">SEE LOCATION</a>
     </div>
     <div class="location">
         <div class="location-img-div">
             <img src="assets/shared/desktop/illustration-united-kingdom.svg" alt="London bridge">
         </div>
         <h3>UNITED KINGDOM</h3>
-        <a href="" class="location-anchor">SEE LOCATION</a>
+        <a [routerLink]="['/locations']" routerLinkActive="router-link-active"  class="location-anchor">SEE LOCATION</a>
     </div>
 </div>
