add tags and styles to desktop view

--- a/src/components/designs/designs.component.html
+++ b/src/components/designs/designs.component.html
@@ -18,8 +18,70 @@
                 </p>
             </div>
         </div>
+        <div class="card">
+            <div class="card-image">
+                <img src="" alt="">
+            </div>
+            <div class="card-info">
+                <h2 class="card-title">EXPRESS</h2>
+                <p class="card-paragraph">
+                    A multi-carrier shipping website for e-commerce businesses
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-image">
+                <img src="" alt="">
+            </div>
+            <div class="card-info">
+                <h2 class="card-title">EXPRESS</h2>
+                <p class="card-paragraph">
+                    A multi-carrier shipping website for e-commerce businesses
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-image">
+                <img src="" alt="">
+            </div>
+            <div class="card-info">
+                <h2 class="card-title">EXPRESS</h2>
+                <p class="card-paragraph">
+                    A multi-carrier shipping website for e-commerce businesses
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-image">
+                <img src="" alt="">
+            </div>
+            <div class="card-info">
+                <h2 class="card-title">EXPRESS</h2>
+                <p class="card-paragraph">
+                    A multi-carrier shipping website for e-commerce businesses
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-image">
+                <img src="" alt="">
+            </div>
+            <div class="card-info">
+                <h2 class="card-title">EXPRESS</h2>
+                <p class="card-paragraph">
+                    A multi-carrier shipping website for e-commerce businesses
+                </p>
+            </div>
+        </div>
     </div>
     <div class="designs">
+        <div class="design-type">
+            <div class="hover-div"></div>
+            <a [routerLink]="['/designs']" routerLinkActive="router-link-active">
+                <h2 class="design-title"></h2>
+                <p class="design-paragraph"> <span>&gt;</span></p>
+            </a>
+        </div>
         <div class="design-type">
             <div class="hover-div"></div>
             <a [routerLink]="['/designs']" routerLinkActive="router-link-active">
