--- a/src/components/designs/designs.component.html
+++ b/src/components/designs/designs.component.html
@@ -1,11 +1,11 @@
 <section>
     <div class="banner">
-        <h1>Web Design</h1>
+        <h1>{{ title }}</h1>
         <p class="banner-paragraph">
-            We build websites that serve as powerful marketing tools 
-            and bring memorable brand experiences.
+            {{description}}
         </p>
     </div>
+    
     <div class="cards-div">
         <div class="card">
             <div class="card-image">
