--- a/src/components/designs/designs.component.html
+++ b/src/components/designs/designs.component.html
@@ -1,8 +1,8 @@
 <section>
     <div class="banner">
-        <h1>{{ title }}</h1>
+        <h1>{{ DesignObject.title }}</h1>
         <p class="banner-paragraph">
-            {{description}}
+            {{DesignObject.subtitle}}
         </p>
     </div>
     
