--- a/src/components/designs/designs.component.scss
+++ b/src/components/designs/designs.component.scss
@@ -48,6 +48,11 @@ h1{
 .card-image{
     width: 100%;
     height: 320px;
+    margin-bottom: 1rem;
+
+    img{
+        width: 100%;
+    }
 }
 
 .card-info{
