--- a/src/components/designs/designs.component.scss
+++ b/src/components/designs/designs.component.scss
@@ -1,8 +1,16 @@
 @import "../../styles.scss";
 
+section{
+    width: 1111px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+}
+
 .banner{
     background-color: $peach;
-    width: 1111px;
+    width: 100%;
     height: 252px;
     border-radius: 15px;
     background-image: url(../../../public/assets/shared/desktop/bg-pattern-call-to-action.svg);
@@ -29,7 +37,7 @@ h1{
 }
 
 .cards-div{
-    width: 1111px;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -75,10 +83,42 @@ h1{
 }
 
 .designs{
-    width: 1111px;
+    width: 100%;
 }
 
 .design-type{
     width: 541px;
     height: 308px;
+}
+
+@media(width <= 1200px){
+
+    section{
+        width: 689px;
+    }
+
+    .banner{
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .cards-div{
+        width: 80%;
+    }
+}
+
+@media(width <= 700px){
+
+    section{
+        width: 90%;
+    }
+
+    .banner{
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .cards-div{
+        width: 80%;
+    }
 }
