--- a/src/components/designs/designs.component.scss
+++ b/src/components/designs/designs.component.scss
@@ -51,6 +51,10 @@ h1{
     margin: 0.5rem;
     background-color: $light-grey;
     border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
 }
 
 .card-image{
@@ -60,6 +64,7 @@ h1{
 
     img{
         width: 100%;
+        border-radius: 15px;
     }
 }
 
@@ -98,9 +103,10 @@ h1{
     }
 
     .banner{
-        width: 80%;
+        width: 100%;
         margin: 0 auto;
     }
+    
 
     .cards-div{
         width: 80%;
@@ -114,7 +120,7 @@ h1{
     }
 
     .banner{
-        width: 80%;
+        width: 100%;
         margin: 0 auto;
     }
 
