add images to anchors

--- a/src/components/designs/designs.component.html
+++ b/src/components/designs/designs.component.html
@@ -23,6 +23,7 @@
         <div class="design-type">
           <div class="hover-div"></div>
           <a [routerLink]="['/designs']" routerLinkActive="router-link-active">
+            <img src="" alt="">
             <h2 class="design-title">{{ DesignObject.anchors[0]['anchor-one'] }}</h2>
             <p class="design-paragraph">VIEW PROJECTS <span>&gt;</span></p>
           </a>
@@ -32,16 +33,10 @@
         <div class="design-type">
           <div class="hover-div"></div>
           <a [routerLink]="['/designs']" routerLinkActive="router-link-active">
+            <img src="" alt="">
             <h2 class="design-title">{{ DesignObject.anchors[1]['anchor-two'] }}</h2>
             <p class="design-paragraph">VIEW PROJECTS <span>&gt;</span></p>
           </a>
         </div>
       </div>
-        <!-- <div class="design-type design-two">
-            <div class="hover-div"></div>
-            <a [routerLink]="['/designs']" routerLinkActive="router-link-active">
-                <h2 class="design-title">{{DesignObject.anchors[1]}}</h2>
-                <p class="design-paragraph">VIEW PROJECTS <span>&gt;</span></p>
-            </a>
-        </div> -->
 </section>
