add images dinamically from JSON file

--- a/src/components/designs/designs.component.html
+++ b/src/components/designs/designs.component.html
@@ -18,12 +18,11 @@
         </div>
       </div>
       <!-- Show every anchor-->
-      <div class="designs design-one">
+      <div class="designs">
         <!-- First anchor -->
         <div class="design-type">
-          <div class="hover-div"></div>
-          <a [routerLink]="['/designs']" routerLinkActive="router-link-active">
-            <img src="" alt="">
+          <a [routerLink]="['/designs']" routerLinkActive="router-link-active" class="design-anchor">
+            <img [src]="'assets/home/desktop/image-' + newVariable + '.jpg'" class="img-design-type" alt="Design type">
             <h2 class="design-title">{{ DesignObject.anchors[0]['anchor-one'] }}</h2>
             <p class="design-paragraph">VIEW PROJECTS <span>&gt;</span></p>
           </a>
@@ -31,9 +30,8 @@
       
         <!-- Second anchor -->
         <div class="design-type">
-          <div class="hover-div"></div>
-          <a [routerLink]="['/designs']" routerLinkActive="router-link-active">
-            <img src="" alt="">
+          <a [routerLink]="['/designs']" routerLinkActive="router-link-active" class="design-anchor">
+            <img src="image- + {{ DesignObject.anchors[1]['anchor-two']?.toLowerCase}}" alt="">
             <h2 class="design-title">{{ DesignObject.anchors[1]['anchor-two'] }}</h2>
             <p class="design-paragraph">VIEW PROJECTS <span>&gt;</span></p>
           </a>
