--- a/src/components/designs/designs.component.scss
+++ b/src/components/designs/designs.component.scss
@@ -40,7 +40,7 @@ h1{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content:flex-start;
+    justify-content:space-evenly;
     align-items: start;
     margin-top: 9rem;
 }
@@ -149,6 +149,25 @@ h1{
     .cards-div{
         width: 100%;
     }
+
+    
+    .designs{
+        flex-direction: column;
+    }
+
+    .design-type{
+        width: 100%;
+        height: 200px;
+        margin-bottom: 3rem;
+    }
+
+    .design-anchor{
+        height: 100%;
+    }
+
+    .design-type, .img-design-type{
+        border-radius: 15px;
+    }
 }
 
 @media(width <= 700px){
@@ -161,4 +180,5 @@ h1{
         width: 100%;
         margin: 0 auto;
     }
+
 }
