--- a/src/components/contact-us/contact-us.component.scss
+++ b/src/components/contact-us/contact-us.component.scss
@@ -77,6 +77,11 @@ label{
     color: $white;
 }
 
+small{
+    color: rgb(197, 2, 2);
+    font-weight: 700;
+}
+
 .submit{
     position: absolute;
     bottom: 0%;
