fix style problems with tablet display

--- a/src/components/design-section/design-section.component.html
+++ b/src/components/design-section/design-section.component.html
@@ -1,20 +1,20 @@
 <section>
 
-    <a [routerLink]="['/designs']" routerLinkActive="router-link-active" class="design-type web-design" id="webDesign" (click)="SendData('Web Design')">
+    <a [routerLink]="['/designs']" routerLinkActive="router-link-active" class="design-type web-design" id="webDesign" (click)="SendData('web design')">
         <div >
             <div class="hover-div"></div>
             <h2 class="design-title">WEB DESIGN</h2>
             <p class="design-paragraph">VIEW PROJECTS <span class="">&gt;</span></p>
         </div>
     </a>
-    <a [routerLink]="['/designs']" routerLinkActive="router-link-active" class="design-type app-design" id="appDesign" (click)="SendData('App Design')" >
+    <a [routerLink]="['/designs']" routerLinkActive="router-link-active" class="design-type app-design" id="appDesign" (click)="SendData('app design')" >
         <div >
             <div class="hover-div"></div>
             <h2 class="design-title">APP DESIGN</h2>
             <p class="design-paragraph">VIEW PROJECTS <span>&gt;</span></p>
         </div>
     </a>
-    <a [routerLink]="['/designs']" routerLinkActive="router-link-active" class="graphic-design design-type" id="graphicDesign" (click)="SendData('Graphic Design')">
+    <a [routerLink]="['/designs']" routerLinkActive="router-link-active" class="graphic-design design-type" id="graphicDesign" (click)="SendData('graphic design')">
     <div >    
         <div class="hover-div"></div>
             <h2 class="design-title">GRAPHIC DESIGN</h2>
