--- a/src/components/design-section/design-section.component.scss
+++ b/src/components/design-section/design-section.component.scss
@@ -123,7 +123,7 @@ section{
 @media(width <= 700px){
     section{
         height: 798px;
-        max-width: 327px;
+        width: 90%;
        
     }
 }
