--- a/src/components/designs/designs.component.scss
+++ b/src/components/designs/designs.component.scss
@@ -6,6 +6,7 @@ section{
     flex-direction: column;
     align-items: center;
     justify-items: center;
+    margin: 0 auto;
 }
 
 .banner{
@@ -103,6 +104,7 @@ h1{
     justify-content: center;
     align-items: center;
     position: relative;
+    border-radius: 15px;
 
 }
 
@@ -112,6 +114,7 @@ h1{
     height: 100%;
     filter: brightness(50%);
     z-index: 0;
+    border-radius: 15px;
 }
 
 .design-anchor{
@@ -150,6 +153,20 @@ h1{
         width: 100%;
     }
 
+    .card{
+        height: 320PX;
+        width: 100%;
+        flex-direction: row;
+    }
+
+    .card-image{
+        margin-bottom: 0;
+
+        img{
+            height: 100%;
+        }
+    }
+
     
     .designs{
         flex-direction: column;
@@ -181,4 +198,18 @@ h1{
         margin: 0 auto;
     }
 
+
+    .card{
+        height: 478px;
+        width: 327px;
+        flex-direction: column;
+    }
+
+    .card-image{
+        margin-bottom: 1;
+
+        img{
+            height: auto;
+        }
+    }
 }
